Fixing issue with docker-compose startup of backend

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       - "90:80"
     volumes:
       - logs:/app/logs
-      - ./backend:/app
+      #- ./backend:/app
       - /app/node_modules
     depends_on:
       - mongodb
