--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,8 @@ services:
       #env_file:
       #  - ./env/mongo.env 
   backend:
-    image: curc0006/backend
+    image: pfregistry1.azurecr.io/backend
+    #image: curc0006/backend
     #build: ./backend
     ports:
       - "90:80"
@@ -25,7 +26,8 @@ services:
     # MONGO_INITDB_ROOT_USERNAME: curtis
     # MONGO_INITDB_ROOT_USERNAME: secret
   frontend:
-    image: curc0006/frontend
+    image: pfregistry1.azurecr.io/frontend
+    #image: curc0006/frontend
     #build: ./frontend
     ports: 
     - "3000:3000"
